# modwire-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.modwire/: architecture.yaml
src/modwire_cli/: __main__.py  config.py  extraction.py  facade.py
src/modwire_cli/pipeline/: context.py  runner.py  step.py
src/modwire_cli/pipeline/steps/: callables_insight.py  clusters_insight.py  coherence_insight.py  flow_violations.py  hotspots_insight.py  map_tree.py  shape_violations.py  success.py  unknown_files_warning.py  unused_exports_insight.py
tests/: test_cli.py
